Added rfc ilnks

--- a/Bee Movie.ipynb
+++ b/Bee Movie.ipynb
@@ -15,7 +15,11 @@
     "https://www.quora.com/How-does-base64-encoding-work\n",
     "\n",
     "Sign ssh file:\n",
-    "https://superuser.com/questions/308126/is-it-possible-to-sign-a-file-using-an-ssh-key"
+    "https://superuser.com/questions/308126/is-it-possible-to-sign-a-file-using-an-ssh-key\n",
+    "\n",
+    "ssh-rsa file encoding\n",
+    "https://tools.ietf.org/html/rfc4253  \n",
+    "https://tools.ietf.org/html/rfc4716"
    ]
   },
   {
