--- a/Bee Movie.ipynb
+++ b/Bee Movie.ipynb
@@ -11,6 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Decode\n",
+    "https://www.base64decode.org/\n",
+    "\n",
     "Structure of base64\n",
     "https://www.quora.com/How-does-base64-encoding-work\n",
     "\n",
@@ -92,6 +95,65 @@
     "for filename in ('id_rsa', 'id_rsa.pub'):\n",
     "    with open(filename, 'r') as file:\n",
     "        print(file.read())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://en.wikipedia.org/wiki/RSA_(cryptosystem)#Key_generation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# https://medium.com/@prudywsh/how-to-generate-big-prime-numbers-miller-rabin-49e6e6af32fb\n",
+    "from random import randrange, getrandbitsdef is_prime(n, k=128):\n",
+    "    \"\"\" Test if a number is prime        Args:\n",
+    "            n -- int -- the number to test\n",
+    "            k -- int -- the number of tests to do        return True if n is prime\n",
+    "    \"\"\"\n",
+    "    # Test if n is not even.\n",
+    "    # But care, 2 is prime !\n",
+    "    if n == 2 or n == 3:\n",
+    "        return True\n",
+    "    if n <= 1 or n % 2 == 0:\n",
+    "        return False\n",
+    "    # find r and s\n",
+    "    s = 0\n",
+    "    r = n - 1\n",
+    "    while r & 1 == 0:\n",
+    "        s += 1\n",
+    "        r //= 2\n",
+    "    # do k tests\n",
+    "    for _ in range(k):\n",
+    "        a = randrange(2, n - 1)\n",
+    "        x = pow(a, r, n)\n",
+    "        if x != 1 and x != n - 1:\n",
+    "            j = 1\n",
+    "            while j < s and x != n - 1:\n",
+    "                x = pow(x, 2, n)\n",
+    "                if x == 1:\n",
+    "                    return False\n",
+    "                j += 1\n",
+    "            if x != n - 1:\n",
+    "                return False    return Truedef generate_prime_candidate(length):\n",
+    "    \"\"\" Generate an odd integer randomly        Args:\n",
+    "            length -- int -- the length of the number to generate, in bits        return a integer\n",
+    "    \"\"\"\n",
+    "    # generate random bits\n",
+    "    p = getrandbits(length)\n",
+    "    # apply a mask to set MSB and LSB to 1\n",
+    "    p |= (1 << length - 1) | 1    return pdef generate_prime_number(length=1024):\n",
+    "    \"\"\" Generate a prime        Args:\n",
+    "            length -- int -- length of the prime to generate, in          bits        return a prime\n",
+    "    \"\"\"\n",
+    "    p = 4\n",
+    "    # keep generating while the primality test fail\n",
+    "    while not is_prime(p, 128):\n",
+    "        p = generate_prime_candidate(length)\n",
+    "    return pprint(generate_prime_number())"
    ]
   },
   {
