--- a/Bee Movie.ipynb
+++ b/Bee Movie.ipynb
@@ -105,11 +105,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# https://medium.com/@prudywsh/how-to-generate-big-prime-numbers-miller-rabin-49e6e6af32fb\n",
-    "from random import randrange, getrandbitsdef is_prime(n, k=128):\n",
+    "from random import randrange, getrandbits\n",
+    "\n",
+    "def is_prime(n, k=128):\n",
     "    \"\"\" Test if a number is prime        Args:\n",
     "            n -- int -- the number to test\n",
     "            k -- int -- the number of tests to do        return True if n is prime\n",
@@ -158,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,6 +186,38 @@
     "    crypto_serialization.PublicFormat.OpenSSH\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Encode/Decode SSH:\n",
+    "1. Generate key\n",
+    "2. Test encryption library\n",
+    "3. Decode SSH key\n",
+    "4. Test to make sure encryption and decryption work\n",
+    "5. Encode SSH key again to proove that I can do a full loop\n",
+    "\n",
+    "Testing primes:\n",
+    "New method of generating\n",
+    "Test using rsa in pyhon\n",
+    "Test using ssh\n",
+    "\n",
+    "Generating primes:\n",
+    "Use any two primes to debug the testing pipeline\n",
+    "\n",
+    "\n",
+    "Generate a prime using our own algorithm\n",
+    "Test that the primes work in the rsa algorithm\n",
+    "Test that the primes work with ssh\n",
+    "Generate a prime with a set prefix\n",
+    "\n",
+    "Find primes based on ssh keys\n",
+    "Convert primes into public key\n",
+    "\n",
+    "Use with rsa to make sure it works\n",
+    "Use on server to make sure it works"
+   ]
   }
  ],
  "metadata": {
@@ -200,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
